Added binary representation; small fixes

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                 =&nbsp;<span id="operation-result"></span>
                             </td>
                         </tr>
+                        <tr id="row-binv" hidden>
+                            <td i18n="row-binv">Binary representation:</td>
+                            <td id="binary-value"></td>
+                        </tr>
                         <tr id="row-normal">
                             <td i18n="row-normal">Normal order:</td>
                             <td id="normal-form"></td>
