Implement interval spectra

--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td i18n="row-ct-vector">Common-tone vector:</td>
                             <td id="ct-vector"></td>
                         </tr>
+                        <tr id="row-spectra" hidden>
+                            <td i18n="row-spectra">Interval spectra:</td>
+                            <td id="spectra"></td>
+                        </tr>
                         <tr id="row-complement">
                             <td>Complement:</td>
                             <td id="complement"></td>
