Implement sum and sum class properties

--- a/index.html
+++ b/index.html
@@ -126,7 +126,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td>Z-correspondent:</td>
                             <td id="zcorrespondent"></td>
                         </tr>
-                        <tr id="row-features">
+                        <tr id="row-sumclass" hidden>
+                            <td>Sum & sum class:</a></td>
+                            <td id="sumclass"></td>
+                        </tr>
+                        <tr id="row-features" hidden>
                             <td i18n="row-features">Set features: <a href="javascript:showFeaturesSelector()" hidden>&#128269;</a></td>
                             <td id="features"></td>
                         </tr>
