Dot dividers replaced with bars

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                         <tr id="row-subsets" hidden>
                             <td>Subsets:</td>
                             <td id="subsets">
-                                <a href="javascript:showSubsetSelector()">All subsets</a> · <a href="javascript:showPrimeSubsetSelector()">Prime subsets</a>
+                                <a href="javascript:showSubsetSelector()">All subsets</a> | <a href="javascript:showPrimeSubsetSelector()">Prime subsets</a>
                             </td>
                         </tr>
                         <tr id="row-misc" always-visible>
@@ -187,13 +187,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td id="misc-area">
                                 <span>
                                     <a href="javascript:playScale()">Play</a>
-                                </span> · 
+                                </span> | 
                                 <span>
                                     <a href="javascript:showExportImageDialog()">Export&nbsp;image</a>
-                                </span> · 
+                                </span> | 
                                 <span>
                                     <a href="javascript:showConfigDialog()">Options</a>
-                                </span> · 
+                                </span> | 
                                 <span>
                                     <a href="javascript:showAboutDialog()">About</a>
                                 </span>
@@ -782,7 +782,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                     <td>
                                         <a id="export-image-download-svg-link" href="javascript:downloadImage('svg')">Save SVG file</a>
                                         <a id="export-image-download-png-link" href="javascript:downloadImage('png')" hidden>Save PNG file</a>
-                                        <span id="export-image-copy-link"> · <a href="javascript:copyImageToClipboard()">Copy image to clipboard</a></span>
+                                        <span id="export-image-copy-link"> | <a href="javascript:copyImageToClipboard()">Copy image to clipboard</a></span>
                                     </td>
                                 </tr>
                             </tbody>
