Fix Scaling hidden for Clockface (transposition) type

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                         </span>
                                     </td>
                                 </tr>
-                                <tr includetype="clockface-set clockface-intervals clockface-inversion tonnetz-set">
+                                <tr excludetype="ruler-set staff-set">
                                     <td><label for="expimg-scale">Scaling</label></td>
                                     <td>
                                         <span class="range-label">Small</span>
